fix: fix burger button z-index

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -98,7 +98,7 @@ html {
     position: fixed;
     top: 15px;
     right: 20px;
-    z-index: 10;
+    z-index: 999;
     background-image: url('../images/burger.svg');
     cursor: pointer;
     transition: 0.5s;
